test_translator/tests/data/checkpoint_1/errors/10_error_cases/solution.py
# This directory has no tests.py to test error handling
def noop():
    pass
